infra/argocd/traefik/middleware-http-https.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-http-https
  namespace: argocd
spec:
  redirectScheme:
    scheme: https
    permanent: true
