infra/argocd/traefik/ingress-route-http.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-http
  namespace: argocd
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`gdargo.goyoai.com`) && PathPrefix(`/`) 
      # match: PathPrefix(`/`) 
      priority: 10
      middlewares:
        - name: redirect-http-https
      services:
        - kind: Service
          name: argocd-server
          port: 80
